--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -26,12 +26,12 @@ block custom-widget
   form.selectMinPrice(method='post')
     .col-xs-2
       .form-group
-        input#minPrice.form-control(type='text', placeholder='Enter a Minimum Price Range)
+        input#minPrice.form-control(type='text', placeholder='Enter a Minimum Price Range')
   
   form.selectMaxPrice(method='post')  
     .col-xs-2  
       .form-group
-        input#maxPrice.form-control(type='text', placeholder='Enter a Maximum Price Range)
+        input#maxPrice.form-control(type='text', placeholder='Enter a Maximum Price Range')
   
   script. 
     onload = resetLocalStorageIndex()
