--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -44,6 +44,8 @@ block content
           .modal-footer.list
             input(type='hidden', name='list', value='')
             button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes
+            h5.totalPrice
+              Total Price:
       
         
 
