--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -45,7 +45,7 @@ block content
             input(type='hidden', name='list', value='')
             button.btn.btn-primary.saveChanges(type='submit', onClick='save_list()') Save Changes
             h5.totalPrice
-              Total Price:
+              | Total Price:
       
         
 
