--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -6,6 +6,7 @@ block append head-content
                 
 block custom-widget
   include search-bar.pug
+  include sidebar_options.pug
   // Button trigger modal
   button.btn.btn-primary.btn-lg.showCartButton(type='button', data-toggle='modal', data-target='#myModal')
     | Show List
