--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -9,29 +9,7 @@ block append head-content
 
 block custom-widget
   include search-bar.pug
-  
-  form.selectStore(method='post')
-    select.selectpicker(multiple title="Shopping Location Options", data-actions-box='true')
-      option Costco
-      option SuperStore
-      option Walmart
-      
-  form.selectNumberItems(method='post')
-    select.selectpicker(title='Items Per Page')
-      option 10
-      option 25 
-      option 50
-      option 100
-      
-  form.selectMinPrice(method='post')
-    .col-xs-2
-      .form-group
-        input#minPrice.form-control(type='text', placeholder='Enter a Minimum Price Range')
-  
-  form.selectMaxPrice(method='post')  
-    .col-xs-2  
-      .form-group
-        input#maxPrice.form-control(type='text', placeholder='Enter a Maximum Price Range')
+  include sidebar_options.pug
   
   script. 
     onload = resetLocalStorageIndex()
