--- a/Web/views/item_searched.pug
+++ b/Web/views/item_searched.pug
@@ -2,6 +2,7 @@ extends layout.pug
 
 block append head-content
   link(href='css/item_searched.css', rel='stylesheet', type='text/css')
+  link(href='css/sidebar_options.css', rel='stylesheet')
   script(src='js/list.js', type='text/javascript') 
                 
 block custom-widget
