--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -2,10 +2,8 @@ extends layout.pug
 
 block append head-content
   script(src='js/list.js', type='text/javascript') 
-  link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/i18n/defaults-*.min.js')
   link(href='css/index.css', rel='stylesheet')
+  link(href='css/sidebar_options.css', rel='stylesheet')
 
 block custom-widget
   include search-bar.pug
