--- a/Web/views/layout.pug
+++ b/Web/views/layout.pug
@@ -9,6 +9,9 @@ html(lang='en')
       script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
       link(href='css/bootstrap.min.css', rel='stylesheet')
       link(href='css/navbar.css', rel='stylesheet', type='text/css')
+      link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css')
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js')
+      script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/i18n/defaults-*.min.js')
 
   body
     block navigation-bar
