--- a/Web/public/css/sidebar_options.css
+++ b/Web/public/css/sidebar_options.css
@@ -4,10 +4,20 @@
   padding: 15px;
 }
 
+.selectStore .btn.btn-default {
+    background-color: #fff;
+    border-color: #ccc;
+}
+
 .selectNumberItems {
   position: absolute;
   margin-top: -200px;
   padding: 15px;
+}
+
+.selectNumberItems .btn.btn-default {
+    background-color: #fff;
+    border-color: #ccc;
 }
 
 .selectMinPrice {
