--- a/Android/SmartShopper/app/src/main/res/layout/fragment_result.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_result.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="androidapp.smartshopper.smartshopper.ResultFragment">
+    tools:context="androidapp.smartshopper.smartshopper.ResultFragment"
+    android:background="@color/white">
 
     <ListView
         android:layout_width="wrap_content"
