--- a/Web/views/delete_acc.pug
+++ b/Web/views/delete_acc.pug
@@ -5,10 +5,11 @@ block append head-content
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
   
 block custom-widget
+  include alert.pug
   .Delete_Acc
     form(method='post')
       h5 Delete your account
-      if status
+      //if status
         h4 #{status}
       input(type='password', name='password', required='', placeholder='Password', autocomplete='off')
       input(type='submit', value='Delete Account', title='Delete Account')
