--- a/Web/views/layout.pug
+++ b/Web/views/layout.pug
@@ -7,11 +7,12 @@ html(lang='en')
       meta(name='viewport', content='width=device-width, initial-scale=1')
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
       script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-      link(href='css/bootstrap.min.css', rel='stylesheet')
-      link(href='css/navbar.css', rel='stylesheet', type='text/css')
-      link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js')
       script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/i18n/defaults-*.min.js')
+      link(href='css/bootstrap.min.css', rel='stylesheet')
+      link(href='css/navbar.css', rel='stylesheet', type='text/css')
+      link(href='css/alert.css', rel='stylesheet', type='text/css')  
+      link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css')
 
   body
     block navigation-bar
