--- a/Web/views/register.pug
+++ b/Web/views/register.pug
@@ -5,11 +5,12 @@ block append head-content
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
 
 block custom-widget
+  include alert.pug
   .Register
     form(onsubmit='return checkForm(this);' method='post')
       h5  Welcome to CheckedOut! 
-      if email_taken
-        h4 #{email_taken}    
+      //if status
+        h4 #{status}    
       input(type='text', name='name', required='', placeholder='Name', autocomplete='off')
       input(type='text', name='email', required='', placeholder='Enter Email', autocomplete='off')
       input(type='text', name='email_verify', required='', placeholder='Confirm Email', autocomplete='off')
