--- a/Web/views/update.pug
+++ b/Web/views/update.pug
@@ -5,10 +5,11 @@ block append head-content
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
   
 block custom-widget
+  include alert.pug
   .Update
     form(method='post')
       h5 Update Your Password
-      if status
+      //if status
         h4 #{status}
       input(type='password', name='old_password', required='', placeholder='Old Password', autocomplete='off')
       input(type='password', name='password', required='', placeholder='New Password', autocomplete='off')
