--- a/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_detail.xml
@@ -13,8 +13,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/detail_wrapper"
-        android:layout_marginBottom="10dp">
+        android:id="@+id/detail_wrapper">
 
 
         <ImageView
@@ -37,35 +36,6 @@
             android:id="@+id/product_name"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TextView
-            android:text="Some Store"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/product_store"
-            android:layout_below="@+id/product_name"
-            android:layout_alignStart="@+id/product_name" />
-
-        <EditText
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/quantity_to_add"
-            android:layout_marginTop="39dp"
-            android:layout_below="@+id/detail_img"
-            android:layout_alignStart="@+id/detail_img" />
-
-        <TextView
-            android:text="$xx.xx"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dip"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/product_price"
-            android:layout_below="@+id/detail_img"
-            android:layout_alignStart="@+id/detail_img" />
-
         <Button
             android:text="To List"
             android:layout_width="wrap_content"
@@ -82,8 +52,37 @@
             android:layout_height="wrap_content"
             android:id="@+id/visit_url"
             android:layout_alignBaseline="@+id/add_to_cart"
-            android:layout_alignBottom="@+id/add_to_cart"
-            android:layout_toEndOf="@+id/product_store" />
+            android:layout_toRightOf="@+id/add_to_cart"
+            android:layout_marginLeft="30dp"/>
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/quantity_to_add"
+            android:layout_marginTop="54dp"
+            android:layout_below="@+id/product_price"
+            android:layout_alignStart="@+id/product_price" />
+
+        <TextView
+            android:text="$xx.xx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/product_price"
+            android:layout_below="@+id/detail_img"
+            android:layout_alignStart="@+id/detail_img" />
+
+        <TextView
+            android:text="Some Store"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/product_store"
+            android:layout_centerVertical="true"
+            android:layout_alignStart="@+id/product_price" />
 
     </RelativeLayout>
 
