--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -203,4 +203,12 @@ li.greeting {
     margin-top: -85px;
 }
 
+.alert {
+    /* by default, alert does not display */
+    display: none; 
+    float: right;
+    /* left: 50%; */
+    width: 15%;
+    transform: translate(-50%);
+}
 
