--- a/Web/views/update.pug
+++ b/Web/views/update.pug
@@ -2,6 +2,7 @@ extends layout.pug
 
 block append head-content
   link(href='css/update.css' rel='stylesheet')
+  link(href='css/alert.css', rel='stylesheet', type='text/css')    
   link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro', rel='stylesheet', type='text/css')
   
 block custom-widget
