--- a/Android/SmartShopper/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/Android/SmartShopper/app/src/main/res/layout/fragment_shopping_list.xml
@@ -38,20 +38,28 @@
             android:layout_height="wrap_content"
             android:id="@+id/list_control">
 
+            <Spinner
+                android:layout_width="180dp"
+                android:layout_height="47dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/all_usr_list" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/new_list_button"
                 android:text="New List"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_toEndOf="@+id/all_usr_list" />
 
-            <Spinner
-                android:layout_width="250dp"
-                android:layout_height="47dp"
+            <Button
+                android:text="Find Route"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"
-                android:id="@+id/all_usr_list" />
+                android:layout_alignParentEnd="true"
+                android:id="@+id/get_route" />
 
         </RelativeLayout>
 
