--- a/Web/public/css/navbar.css
+++ b/Web/public/css/navbar.css
@@ -72,3 +72,11 @@
     float: left;
     margin-top: 100px;
 }
+
+
+li.greeting {
+    position: relative;
+    display: block;
+    margin-top: 103px;
+    padding: 12px;
+}
