--- a/Web/views/update.pug
+++ b/Web/views/update.pug
@@ -8,10 +8,8 @@ block append head-content
 block custom-widget
   include alert.pug
   .Update
-    form(method='post')
+    form(onsubmit='return checkUpdateForm(this);' method='post')
       h5 Update Your Password
-      //if status
-        h4 #{status}
       input(type='password', name='old_password', required='', placeholder='Old Password', autocomplete='off')
       input(type='password', name='password', required='', placeholder='New Password', autocomplete='off')
       input(type='password', name='password_verify', required='', placeholder='Confirm New Password', autocomplete='off')
