bunch of web changes

--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -2,11 +2,18 @@ body {
     /*background-image: url('../Searched_.jpg');
     background-size: 1920px 1000px; 
     */
-    
+    /*
     background: url(http://liondocs.com/wp-content/uploads/2014/12/Website-Background.jpg) , linear-gradient(to top, #ffee75 3%,#ffb06b 27%,#e86f97 50%,#b08cff 75%,#5477af 100%);
     background-blend-mode: luminosity;  
-    background-size: cover;  
-    min-height: 974px; 
+    background-size: cover;
+    background-repeat: repeat-x;  
+    */
+    background-image: url('../CheckedOutBackgroundIndex.png');
+
+    background-repeat: no-repeat;    
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    /*min-height: 974px; */
 }
 
 
