--- a/Web/views/manage_lists.pug
+++ b/Web/views/manage_lists.pug
@@ -2,18 +2,16 @@ extends layout.pug
 
 block append head-content
   link(href='css/manage_lists.css', rel='stylesheet', type='text/css')
-  
-                
-//- 
-block custom-widget
-  
+                  
 block content
   // SEARCH RESULTS
-  li
-    .row
-      .col-sm-6.col-md-4
-      for list in user_lists
-        a.viewList(href='#') #{list}
+  .Manage
+    form
+      h5 Your Lists
+      ul.list-group
+        for list in user_lists
+          li.list-group-item
+            a.viewList(href='#') #{list}
 
 block append footer-scripts
   script(src='js/get_list.js', type='text/javascript')            
