--- a/Web/public/css/item_searched.css
+++ b/Web/public/css/item_searched.css
@@ -12,7 +12,7 @@ body {
 
     background-repeat: no-repeat;    
     background-attachment: fixed;
-    background-size: 100% 100%;
+    background-size: 100% auto;
     /*min-height: 974px; */
 }
 
