--- a/Web/views/index.pug
+++ b/Web/views/index.pug
@@ -3,7 +3,9 @@ extends layout.pug
 block append head-content
   script(src='js/list.js', type='text/javascript') 
   link(href='css/index.css', rel='stylesheet')
+  link(href='css/search_bar.css', rel='stylesheet')
   link(href='css/sidebar_options.css', rel='stylesheet')
+
 
 block custom-widget
   include search-bar.pug
